2005-11-04  Yves Combe  <yves@ycombe.net>

	Merged commit from HEAD.
	Fix signal name presentation in gcompris_terminate.
	Suppress gnome_canvas_update_now in menu (cause of segfault in fullscreen mode).

	* src/boards/menu.c: (menu_start):
	* src/gcompris/gcompris.c: (gcompris_terminate):

2005-11-04  Bruno coudoin  <bruno.coudoin@free.fr>

	reviewed by: <delete if not using a buddy>

	* src/boards/menu.c: (menu_start):
	* src/gcompris/gcompris.c: (gcompris_terminate):


	*** RELEASE 7.1PRE2 ***

2005-11-03  Bruno coudoin  <bruno.coudoin@free.fr>

	Port of commit in HEAD 2005-11-01:
	- Fixes text of board description being badly wrapped
	  I now use the richtext canvas to display it. We may
	  loose on reliabilty.

	* boards/canal_lock.xml.in:
	* boards/clickgame.xml.in:
	* boards/gnumch-inequality.xml.in:
	* boards/guessnumber.xml.in:
	* boards/redraw_symmetrical.xml.in:
	* boards/traffic.xml.in:
	* boards/watercycle.xml.in:
	* src/boards/menu.c: (menu_start), (menu_end), (item_event),
	(set_content), (create_info_area):
	* src/boards/python/anim.py:
	* src/boards/python/guessnumber.py:
	* src/gcompris/gameutil.c: (gcompris_add_xml_to_data):

2005-11-02  Bruno coudoin  <bruno.coudoin@free.fr>

	- fixed audio file detection to not accept a directory as a valid
	  input.
	- fixed bad named audio files in geography.
	
	* boards/doubleentry/Makefile.am:
	* boards/geography/Makefile.am:
	* boards/geography/board1_0.xml.in:
	* boards/sounds/fr/geography/europa.ogg: renamed
	* boards/sounds/fr/geography/europe.ogg:
	* boards/sounds/fr/geography/gcompris_geography_fr.assetml.in:
	* boards/sounds/pt/geography/europa.ogg: renamed
	* boards/sounds/pt/geography/europe.ogg:
	* boards/sounds/pt/geography/gcompris_geography_pt.assetml.in:
	* src/gcompris/gameutil.c: (gcompris_find_absolute_filename):
	* src/gcompris/soundutil.c: (thread_play_ogg):

2005-10-31  Bruno coudoin  <bruno.coudoin@free.fr>

	Many bugfixes.