@@ -486,6 +486,8 @@ static void init_background()
   
   /* First, Remove the gnome crash dialog because it locks the user when in full screen */
   signal(SIGSEGV, gcompris_terminate);
+  signal(SIGINT, gcompris_terminate);
+
 
   /* Background area if ratio above 1 */
   if(properties->fullscreen)
@@ -816,6 +818,10 @@ void gcompris_end_board()
 
 void gcompris_exit()
 {
+  /* Do not loopback in exit */
+  signal(SIGINT,  NULL);
+  signal(SIGSEGV, NULL);
+
   board_stop();
 
   gcompris_db_exit();
@@ -825,9 +831,12 @@ void gcompris_exit()
   if(properties->fullscreen && !properties->noxrandr)
     {
       /* Need to refresh our config or xrandr api will reject us */
-      xrandr_get_config ( xrandr );
-      xrandr->xr_current_size = (SizeID)xr_previous_size;
-      xrandr_set_config( xrandr );
+      if(xrandr)
+	{
+	  xrandr_get_config ( xrandr );
+	  xrandr->xr_current_size = (SizeID)xr_previous_size;
+	  xrandr_set_config( xrandr );
+	}
     }
 #endif
 
@@ -1054,8 +1063,6 @@ gcompris_init (int argc, char *argv[])
 
   /* To have some real random behaviour */
   srand (time (NULL));
-
-  signal(SIGINT, gcompris_terminate);
 
   /* Default difficulty filter: non specified */
   popt_difficulty_filter = -1;
